# vibesql-mail-mcp

./: .gitignore  CHANGELOG.md  README.md
client/: launch-all.bat  package-lock.json  package.json  tsconfig.json
client/src/: api.ts  config.ts  index.tsx
client/src/components/: AgentPicker.tsx  CharCounter.tsx  ComposeForm.tsx  MessageList.tsx  StatusBar.tsx
client/src/hooks/: useApi.ts  useKeyboard.ts  useSafeInput.ts
client/src/screens/: Agents.tsx  Compose.tsx  Help.tsx  Inbox.tsx  ReadMessage.tsx  Sent.tsx  SetupWizard.tsx  Thread.tsx
npm/: .npmignore  index.js  package.json
npm/scripts/: install.js
openclaw-push/: README.md  mail-watcher.js
server/: Cargo.toml
server/migrations/: 001_init.sql  002_agent_mail_indexes.sql
server/src/: auth.rs  db.rs  error.rs  main.rs  mcp.rs
server/src/models/: agent.rs  inbox.rs  message.rs  mod.rs
server/src/routes/: admin.rs  agents.rs  messages.rs  mod.rs  stream.rs  threads.rs
specs/: agent-push-injection-v1.md  vibesql-mail-mcp-design-spec.md  vibesql-mcp-design-spec.md  workflow-templates.md
