[package]
name = "vibesql-mail-server"
version = "1.0.0"
edition = "2021"
description = "Standalone agent mail server for AI coding agents"
license = "Apache-2.0"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
futures = "0.3"
